--- a/master.html
+++ b/master.html
@@ -15,7 +15,7 @@
 <hr></hr>
 <center>
 	<p>Hi Ashley!</p>
-	<form onsubmit="validateAshleyPassword(this)" method="post">
+	<form onsubmit="validateAshleyPassword(this)">
 		<table border=1 align="center">
 			<tr>
 				<td>Password:</td>
