--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <center>
     <p>Welcome to the hub for Hidden Truth Jewelry's Inventory!</p>
     <p>If you have not already, please email your password preference to <a href ='mailto:tmkeaton@ngu.edu'>tmkeaton@ngu.edu</a> so we can keep your information secure.</p>
+    <p>Also, if you would like any images to customize your page on this site, feel free to send them to me as well so I can get them added!</p>
 </center>
 </body>
 
