blocking variables from readability

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+<script type="text/javascript" src="1data.js"></script>
 <title>Hidden Truth Inventory Hub</title>
 <body>
 <h1><center>Hidden Truth Inventory<center></h1>
